--- a/_config.yml
+++ b/_config.yml
@@ -10,9 +10,9 @@ name: Matt Couchman
 job: front end engineer
 location: Birmingham, UK
 languages: HTML, CSS and Javascript
-twitter_username: hanhnguye
-github_username:  hanhnguye
-codepen_username:  hanhnguye
+twitter_username: hanhnguyen
+github_username:  hanhnguyen
+codepen_username:  hanhnguyen
 email_address: some@email.com
 
 # Build settings
